Fixed alignment of icon

--- a/src/common/distancebearing/style/distanceBearing.less
+++ b/src/common/distancebearing/style/distanceBearing.less
@@ -5,12 +5,11 @@
     bottom: 10px;
     height: 22px;
     width: 22px;
-    background-color: rgba(0,60,136,.7);
-    color: white;
-    span {
-      display: block;
-    }
-
+    color: #ffffff;
+    background: rgba(0, 60, 136, 0.5);
+    border-radius: 4px;
+    padding-top: 2px;
+    padding-left: 3px;
   }
 
   .popup {
